# pandafe

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  NEWS  README  README.md  TestRunner.vala  autogen.sh  configure.ac  main.vala  yayafe.mdproj
Gui/: Dialog.vala  (+4 more)
data/: Makefile.am  native_platform  platform_folders  preferences  preferences.in
data/Platform/: Makefile.am  arcade  atari2600  atarilynx  colecovision  commodore64  gameboy  gameboyadvance  intellivision  mame  msx  n64  neogeo  neogeopocket  nes  nintendo64  nintendods  playstation  scummvm  sega32x  segacd  segagamegear  segagenesis  segamastersystem  snes  supernes  turbografx16  wonderswan
data/Preset/: Makefile.am
data/Preset/Appearance/: Makefile.am  olddefault
data/Program/: DraStic  Makefile.am  Temper  colem.skeezix  dega.cosam.1.16.4.0  fba-dave18  gambatte-qt  gngeopnd-pepone  gpfce.notaz  gpfcegp2x  gpsp.notaz  handy.cosam.0.5.0.0  jzintv.WizardStan.1  mame.cosam.106  mednafen-gb  mednafen-gba  mednafen-gg  mednafen-lynx  mednafen-nes  mednafen-ngp  mednafen-pce  mednafen-sms  mednafen-wswan  mupen64plus-PickleLauncher  mupen64plus2_ptitseb  openMSX_PND  pcsx_rearmed.notaz  picodrive.notaz  picodrive.notaz.1.80  scummvm  sdlgnuboy  snes9x.skeezix.alpha  stella  vicex64.pickle
data/fonts/: Makefile.am  SeattleAvenue-license.txt
pnd/: Makefile.am  PXML.xml.in  README  pandafe.sh
pnd/previews/: Makefile.am
scripts/: Makefile.am  cpuspeed_change_exec_wrapper.sh  pnd_logging  pnd_run.sh  pnd_run.sh.in  update-stamp-from-dependencies.sh
src/: Banner.h  ConfigGui.vala  EventHandler.vala  GameBrowser.vala  GameBrowserUI.vala  GuiInstaller.vala  InterfaceHelper.vala  Makefile.am  Options.vala  PlatformSelector.vala  RuntimeEnvironment.vala  Selector.vala  SelectorItemSet.vala  Spawning.vala  SpawningResult.vala  TestRunner.vala  TextEntry.vala  Utility.vala  libpndtest.vala  main.vala
src/Data/: Color.vala  Favorites.vala  GameBrowserAppearance.vala  GameBrowserState.vala  GameBrowserViewData.vala  GameSettings.vala  GamesRunList.vala  Interface.vala  NativePlatform.vala  NativePlatformCategory.vala  Platform.vala  Pnd.vala  Preferences.vala  Program.vala  ProgramSettings.vala  Provider.vala
src/Data/Appearances/: Appearance.vala  AppearanceAreaType.vala  AppearanceAreaUI.vala  AppearanceDefaults.vala  AppearanceFontAreaType.vala  AppearanceInfo.vala  AppearanceProvider.vala  AppearanceType.vala  GameBrowserAppearance.vala  MenuAppearance.vala
src/Data/GameList/: AllGames.vala  AllGamesCache.vala  GameFolder.vala  GameFolderCache.vala  GameItem.vala  GameListProvider.vala  GameNodeMenuData.vala  IGameListNode.vala  RomFiles.vala  RomList.vala
src/Data/Options/: DoubleOption.vala  FlagOption.vala  IntegerOption.vala  MultipleChoiceOption.vala  Option.vala  OptionGrouping.vala  OptionSet.vala  OptionType.vala  StringOption.vala  StringSelectionOption.vala
src/Data/Pnd/: AppIdType.vala  AppItem.vala  AppOverride.vala  Category.vala  MountSet.vala  PndCache.vala  PndData.vala  PndItem.vala
src/Data/ProgramDefinition/: Option.vala  OptionData.vala  OptionPath.vala  OptionSet.vala  OptionSetState.vala  ProgramArgument.vala  ProgramDefinition.vala
src/Data/Programs/: Program.vala  ProgramProvider.vala  ProgramSettings.vala
src/Fields/: AppearanceField.vala  ClockSpeedField.vala  ClockspeedField.vala  ColorField.vala  CustomCommandField.vala  DefaultProgramField.vala  GColorField.vala  GPndAppSelectionField.vala  GPndSelectionField.vala  GProgramListField.vala  GameBrowserAppearanceField.vala  GameSettingsListField.vala  NativePlatformCategoryAppListField.vala  NativePlatformCategoryListField.vala  NativePlatformSubCategoryListField.vala  OptionGroupingField.vala  PlatformFolderListField.vala  PlatformListField.vala  PlatformNodeListField.vala  PlatformProgramSettingsMapField.vala  PndAppField.vala  PndAppSelectionField.vala  PndCategoryField.vala  PndScriptFileField.vala  PndSelectionField.vala  ProgramAppIdField.vala  ProgramDefaultSettingsField.vala  ProgramField.vala  ProgramListField.vala  ProgramOptionsListField.vala  ProgramSelectionField.vala  ProgramSettingsField.vala  SourceEditField.vala
src/GameList/: GameFolder.vala  GameFolderCache.vala  GameItem.vala  GameListNode.vala  GameListProvider.vala  IGameListNode.vala  PndList.vala  ProgramGameList.vala  RomList.vala
src/GtkFields/: GtkClockspeedField.vala  GtkColorField.vala  GtkCustomCommandField.vala  GtkDefaultProgramField.vala  GtkPlatformListField.vala  GtkPndAppSelectionField.vala  GtkPndScriptFileField.vala  GtkPndSelectionField.vala  GtkProgramListField.vala  GtkSourceEditField.vala
src/Layers/: DummyLayer.vala  Layer.vala  LayerBase.vala  ScreenAlphaLayer.vala  ScreenLayer.vala  SurfaceLayer.vala
src/Layers/Controls/: DeletionConfirmation.vala  DoubleEntry.vala  FileChooser.vala  FolderChooser.vala  GameCategorySelector.vala  IntegerEntry.vala  ListEditor.vala  PndAppChooser.vala  PndCategoryChooser.vala  StringListEditor.vala  StringSelector.vala  TextEntry.vala  UIntEntry.vala  ValueSelector.vala  ValueSelectorBase.vala
src/Layers/GameBrowser/: CategorySelectorOverlay.vala  HeaderLayer.vala  MenuOverlay.vala  PlatformChooser.vala  PlatformSelectorOverlay.vala  SelectorOverlay.vala  StatusMessageLayer.vala  ViewChooser.vala
src/Layers/MenuBrowser/: ColorDisplayLayer.vala  (+2 more)
src/Menus/: Menu.vala  MenuBrowser.vala  MenuBrowserItem.vala  MenuBuilder.vala  MenuItem.vala  MenuItemActionType.vala  MenuItemSeparator.vala  MenuObject.vala  MenuSelector.vala  MenuUI.vala  ObjectBrowserItem.vala  ObjectMenu.vala  SubMenuItem.vala
src/Selectors/: EverythingSelector.vala  GameCategorySelector.vala  GameFolderSelector.vala  GamePlatformSelector.vala  PlatformFolderSelector.vala  PlatformSelector.vala  Selector.vala  SelectorItemSet.vala
src/Tests/: DataInterfaceTests.vala  EnumerableTests.vala  IndirectGenericsTests.vala  TestSet.vala  TypeRuntimeTests.vala  YamlDocumentTests.vala
src/gtksourceview/: Makefile.am  README  embedded_languages.c.in  gtksourcelanguage-parser-2.c  gtksourcelanguage.c  gtksourceview-i18n.h
(+116 files in other folders)
