NULL =

platformsdir=$(pkgdatadir)/Platform
dist_platforms_DATA = \
	atarilynx \
	gameboy \
	gameboyadvance \
	mame \
	neogeopocket \
	nes \
	nintendo64 \
	playstation \
	sega32x \
	segacd \
	segagamegear \
	segagenesis \
	segamastersystem \
	supernes \
	turbografx16 \
	wonderswan \
	$(NULL)

$(dist_platforms_DATA):
	$(NULL)
