NULL =

platformsdir=$(pkgdatadir)/Platform
dist_platforms_DATA = \
	arcade \
	atari2600 \
	atarilynx \
	colecovision \
	commodore64 \
	gameboy \
	gameboyadvance \
	intellivision \
	msx \
	neogeo \
	neogeopocket \
	nes \
	nintendo64 \
	nintendods \
	playstation \
	sega32x \
	segacd \
	segagamegear \
	segagenesis \
	segamastersystem \
	scummvm \
	supernes \
	turbografx16 \
	wonderswan \
	$(NULL)

$(dist_platforms_DATA):
	$(NULL)
