NULL =

programsdir=$(pkgdatadir)/Program
dist_programs_DATA = \
	dega.cosam.1.16.4.0 \
	gpfcegp2x \
	gpsp.notaz \
	handy.cosam.0.5.0.0 \
	mame.cosam.106 \
	mednafen-gb \
	mednafen-gba \
	mednafen-gg \
	mednafen-lynx \
	mednafen-nes \
	mednafen-ngp \
	mednafen-pce \
	mednafen-sms \
	mednafen-wswan \
	mupen64plus-PickleLauncher \
	pcsx_rearmed.notaz \
	picodrive.notaz.1.80 \
	sdlgnuboy \
	snes9x.skeezix.alpha \
	Temper \
	$(NULL)

$(dist_programs_DATA):
	$(NULL)
