NULL =

programsdir=$(pkgdatadir)/Program
dist_programs_DATA = \
	colem.skeezix \
	dega.cosam.1.16.4.0 \
	fba-dave18 \
	gambatte-qt \
	gngeopnd-pepone \
	gpfcegp2x \
	gpfce.notaz \
	gpsp.notaz \
	handy.cosam.0.5.0.0 \
	jzintv.WizardStan.1 \
	mame.cosam.106 \
	mednafen-gb \
	mednafen-gba \
	mednafen-gg \
	mednafen-lynx \
	mednafen-nes \
	mednafen-ngp \
	mednafen-pce \
	mednafen-sms \
	mednafen-wswan \
	mupen64plus-PickleLauncher \
	openMSX_PND \
	pcsx_rearmed.notaz \
	picodrive.notaz.1.80 \
	scummvm \
	sdlgnuboy \
	snes9x.skeezix.alpha \
	stella \
	Temper \
	vicex64.pickle \
	$(NULL)

$(dist_programs_DATA):
	$(NULL)
